@@ -13,3 +13,4 @@ t/4.t
 t/swallow_stderr.inc
 t/test_glib-2.0.pc
 t/test_non_numeric.pc
+t/test_short.pc
